node-agent.yaml
apiVersion: apps/v1
kind: DaemonSet

metadata:
  name: node-agent
  namespace: cka-lab

spec:
  selector:
    matchLabels:
      app: node-agent

  template:
    metadata:
      labels:
        app: node-agent

    spec:
      containers:
        - name: agent
          image: busybox:1.36
          command:
            - sh
            - -c
            - 'while true; do echo "agent alive"; sleep 30; done'
      tolerations:
        - key: node-role.kubernetes.io/control-plane 
          operator: Exists
          effect: NoSchedule
