httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-route
  namespace: cka-lab
spec:
  parentRefs:
    - name: app-gateway
      namespace: gateway-infra
      sectionName: http
  hostnames:
    - api.ironman.test
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: api
          port: 80
