api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-ingress
  namespace: cka-lab
spec:
  podSelector:
    matchLabels:
      app: api

  policyTypes:
    - Ingress

  ingress:
    - ports:
        - protocol: TCP
          port: 8000
